--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
